# GrITAS

./: .gitignore  CMakeLists.txt  README.md  components.yaml  parallel_build.csh
config/: GMAO_Shared.sparse
src/Applications/: CMakeLists.txt
src/Applications/GrITAS_App/: CMakeLists.txt  grisas.f  gritas.f
src/Applications/GrITAS_Plot/: CMakeLists.txt  README.md  common.py  defaults.py  figutil.py  gritStatViz.py  iniPlotYaml.py  myFormat.regions.template.yaml  plot_util.py  regions.yaml  requirements.txt  resid-yaml.py  test.py  userDefRegions.ex.list
src/Applications/GrITAS_Plot/my_test/: gritStatViz.py  helperFns.py  something.py
src/Applications/GrITAS_Plot/rt_test/: gritas_data.py  new.py  residuals.yml  something.py
src/Applications/GrITAS_Plot/rt_test/Hold/: new.py
src/Applications/GrITAS_Plot/templates/: dfs.template.yaml  experiments.yaml  impacts.template.yaml  residuals.template.yaml
src/Applications/GrITAS_Proc/: CMakeLists.txt  README.md  build-yaml.py  build-yaml.py.in  driver.sh  env_gritas.sh  grdstats.py  grit.py  grit_util.py  grit_util.py.in
src/Components/: CMakeLists.txt
src/Components/gritas/: CMakeLists.txt  GNUmakefile  generate_raob_speed.f90  gritas.h  gritas_gfio.f  gritas_grads.f  m_gritas_binning.F  m_gritas_grids.f  m_gritas_masks.F90
src/Components/gritas/GIO/: README  README_CONV  diag2gritas2.csh3  diag2grlist.csh  dsat2gritas2.csh  dsat2gritas2_ods.csh  envfile.csh  get_instrument.csh  get_sat.csh  gritas2means.csh  gritas_means.csh  run_diag_gritas.csh  run_dsat.csh  run_dsat2.csh  run_dsat_new.csh  run_dsat_old.csh  run_ncrcat.csh  run_sat_gritas.csh  run_set_job  run_set_job.csh  set_dsat_job_dali01.csh  set_dsat_job_dali02.csh  set_job  set_means.csh  set_means2.csh  set_means3.csh
src/Components/gritas/GIO/ctl_files/: merra.6hourly3d_mean_p.ctl  merra.6hourly3d_nobs_p.ctl  merra.6hourly3d_obs_p.ctl  merra.6hourly3d_oma_p.ctl  merra.6hourly3d_omf_p.ctl  merra.6hourly3d_stdv_p.ctl  merra.mon_mean3d_00z_p.ctl  merra.mon_mean3d_06z_p.ctl  merra.mon_mean3d_12z_p.ctl  merra.mon_mean3d_18z_p.ctl  merra.mon_mean3d_obs_p.ctl  merra.mon_mean3d_oma_p.ctl  merra.mon_mean3d_omf_p.ctl  merra.mon_mean3d_p.ctl
src/Components/gritas/GIO/rc_files/: grisas_upconv_merra.rc  gritas_aircraft_merra.rc  gritas_airs_aqua_merra.rc  gritas_amsua_am_merra.rc  gritas_amsua_aqua_merra.rc  gritas_amsua_noaa16_merra.rc  gritas_amsua_noaa17_merra.rc  gritas_amsua_pm_merra.rc  gritas_amsub_am_merra.rc  gritas_amsub_noaa15_merra.rc  gritas_amsub_pm_merra.rc  gritas_gsnd_goes08_merra.rc  gritas_gsnd_goes10_merra.rc  gritas_gsnd_goes12_merra.rc  gritas_hirs3_am_merra.rc  gritas_hirs3_noaa15_merra.rc  gritas_hirs3_pm_merra.rc  gritas_mhs_noaa18_merra.rc  gritas_mhs_pm_merra.rc  gritas_msu_am_merra.rc  gritas_msu_pm_merra.rc  gritas_ssmi_dmsp10_merra.rc  gritas_ssmi_dmsp11_merra.rc  gritas_ssmi_dmsp13_merra.rc  gritas_ssmi_dmsp14_merra.rc  gritas_ssmi_dmsp15_merra.rc  gritas_ssu_am_merra.rc  gritas_ssu_noaa06_merra.rc  gritas_ssu_noaa07_merra.rc  gritas_ssu_noaa08_merra.rc  gritas_ssu_noaa09_merra.rc  gritas_ssu_noaa10_merra.rc  gritas_ssu_noaa11_merra.rc  gritas_ssu_noaa12_merra.rc  gritas_ssu_noaa14_merra.rc  gritas_ssu_tirosn_merra.rc  gritas_upconv_merra.rc  gritas_upconv_merra2.rc  gritas_upconv_merra_old.rc
src/Components/gritas/etc/: gritas_aircraft.rc  gritas_aircraftT.rc  gritas_aircraftW.rc  gritas_airs.rc  gritas_amsua.rc  gritas_amsua_aqua.rc  gritas_amsua_metop-a.rc  gritas_amsua_metop-b.rc  gritas_amsua_metop-c.rc  gritas_amsua_n15.rc  gritas_amsua_n18.rc  gritas_amsua_n19.rc  gritas_amsub.rc  gritas_atms.rc  gritas_atms_all.rc  gritas_atms_n20.rc  gritas_atms_npp.rc  gritas_aura_tco3.rc  gritas_conv.rc  gritas_cris-fsr_n20-comm.rc  gritas_cris-fsr_n20.rc  gritas_cris-fsr_npp.rc  gritas_cris_all.rc  gritas_crisfsr.rc  gritas_crisfsr_all.rc  gritas_gmi.rc  gritas_gmi_gpm.rc  gritas_goes.rc  gritas_goessond.rc  gritas_gps_100lev.rc  gritas_gps_100lev2.rc  gritas_gps_60km.rc  gritas_gps_all.rc  gritas_gps_all2.rc  gritas_gps_all3.rc  gritas_gps_bend.rc  gritas_gps_bend2.rc  gritas_gps_cosmic.rc  gritas_gps_cosmic2.rc  gritas_gps_split.rc  (+23 more)
src/Shared/: CMakeLists.txt
src/Shared/UTexas_Shared/: CMakeLists.txt
src/Shared/UTexas_Shared/UTexas_dcdf/: CMakeLists.txt  GNUmakefile  TT  cdft.f.fix  ut_cdfchi.f
